--- a/index.html
+++ b/index.html
@@ -84,6 +84,36 @@
         top: 100%;
       }
 
+      .love-stream {
+        position: fixed;
+        inset: 0;
+        pointer-events: none;
+        overflow: hidden;
+        z-index: 6;
+        font-family: inherit;
+      }
+
+      .love-stream span {
+        position: absolute;
+        top: 100%;
+        left: var(--left, 50%);
+        transform: translate(-50%, 120vh);
+        font-weight: 600;
+        letter-spacing: 0.12em;
+        text-transform: uppercase;
+        font-size: clamp(1rem, 2.4vw, 1.85rem);
+        color: rgba(255, 255, 255, 0.88);
+        text-shadow: 0 12px 25px rgba(255, 79, 159, 0.5);
+        animation: loveRise var(--duration, 12s) linear infinite;
+        animation-delay: var(--delay, 0s);
+        white-space: nowrap;
+        opacity: 0;
+      }
+
+      .love-stream span:nth-child(odd) {
+        font-size: clamp(1.15rem, 2.8vw, 2rem);
+      }
+
       .sparkles span:nth-child(odd) {
         animation-duration: 8.5s;
       }
@@ -105,6 +135,23 @@
         }
         100% {
           transform: translateY(-120vh) scale(1.15);
+          opacity: 0;
+        }
+      }
+
+      @keyframes loveRise {
+        0% {
+          transform: translate(-50%, 120vh);
+          opacity: 0;
+        }
+        10% {
+          opacity: 0.95;
+        }
+        80% {
+          opacity: 0.95;
+        }
+        100% {
+          transform: translate(-50%, -140vh);
           opacity: 0;
         }
       }
@@ -566,6 +613,7 @@
       <span style="left: 75%; animation-delay: 0.9s;"></span>
       <span style="left: 90%; animation-delay: 1.8s;"></span>
     </div>
+    <div class="love-stream" aria-hidden="true"></div>
 
     <main>
       <div class="glow-heart"></div>
@@ -646,6 +694,38 @@
         const body = document.body;
         const cover = document.querySelector(".cover-wrapper");
         const fireworks = document.querySelector(".fireworks");
+        const loveStream = document.querySelector(".love-stream");
+
+        if (loveStream) {
+          const phrases = ["I", "love", "you", "I love you"];
+          const STREAM_COUNT = 120;
+
+          const spawnLoveSpan = () => {
+            const span = document.createElement("span");
+            span.textContent = phrases[Math.floor(Math.random() * phrases.length)];
+
+            const duration = 10 + Math.random() * 6;
+            const delay = -Math.random() * duration;
+            const left = Math.random() * 100;
+
+            span.style.setProperty("--duration", `${duration.toFixed(2)}s`);
+            span.style.setProperty("--delay", `${delay.toFixed(2)}s`);
+            span.style.setProperty("--left", `${left.toFixed(2)}%`);
+
+            span.addEventListener("animationend", () => {
+              span.remove();
+              requestAnimationFrame(() => {
+                spawnLoveSpan();
+              });
+            });
+
+            loveStream.appendChild(span);
+          };
+
+          for (let i = 0; i < STREAM_COUNT; i += 1) {
+            spawnLoveSpan();
+          }
+        }
 
         const startFireworks = () => {
           if (!fireworks || fireworks.dataset.started === "true") {
